tests/invalid/bad_origin.s
  .text

  .global _start
_start:
  nop
  nop
  nop
  nop
.origin 0
  nop
  nop